--- a/public/stylesheets/story-views.css
+++ b/public/stylesheets/story-views.css
@@ -16,7 +16,7 @@ set work styles
 .work-show dt		{ font-weight:bold; text-indent:0;}
 .work-show dd		{ line-height:1.5; font-size:0.875em; text-indent:3em; margin-top:1.25em; margin-bottom:1.25em; }
 .work-show dd p		{ text-indent:0; margin:0; padding:0; }
-.work-show ul		{ margin:1.125em auto; padding:0 1em; }
+/* .work-show ul		{ margin:1.125em auto; padding:0 1em; } */
 .work-show ul li	{ list-style-type:disc; margin:0.75em 0 0.75em -1.75em;}
 .work-show .navigation ul li { margin:0.25em;}
 .work-show ol		{ margin:1.125em auto; padding:0 1.5em; }
@@ -61,7 +61,7 @@ set work styles
 dl.work-meta { background:#eee; padding:0.25em; position:relative;margin-top:0; border:1px solid #ddd;;}
 div.work-meta { background:#eee; padding:0.25em; position:relative; margin: 0 0 1.5em; border:1px solid #ddd;}
 .work-meta dt { width:7em; font-weight:100;}
-.work-meta ul { margin:-1.9675em 0 .75em 13em; text-indent:0; padding:0;}
+/* .work-meta ul { margin:-1.9675em 0 .75em 13em; text-indent:0; padding:0;} */
 .work-meta dd ul li {display:inline; margin:auto !important;}
 
 /*WORK PREFACE - TITLE AND NOTES */
